@@ -6,6 +6,7 @@ Version 1.0.414 Released June 8, 2012
     - Added VaadinApplicationListener.addAsListenerTo()
     - Added AtomicUpdateFileOutputStream and {,File}StreamRepository
     - Added AbstractDAO.contains()
+    - Added PropertyDef.cast()
     - Added ThreadLocalHolder
 
 Version 1.0.349 Released April 27, 2012
